# TackleBox

./: .gitignore  LICENSE  README.md
FlyForge/: CHANGELOG.md  CITATION.cff  FlyForge  FlyForge.py  FlyForgeAudit  FlyForgeAudit.py  FlyForgeAudit_README.md  README.md
FlyGuide/: LICENSE  NCBI-NT_Downloader.pl  README.md  README_GBIF.md  README_NEOTOMA.md  README_PBDB_NOW.md  TUTORIAL.md  _palaeo_tui.py  flyguide.sh  flyguide_merge_palaeo_sources.py  flyguide_neotoma.sh  flyguide_palaeo_sources.py  gbif_prep_from_csv.py  gbif_query.py  neotoma_extinct_to_gbif.py  pbdb_to_gbif.py  regions_config.tsv  split_fasta_by_kingdom_organelle_simple.pl
FlyGuide/tests/: test_neotoma_exporter.py  test_palaeo_exporters.py
MetaMerge/: LICENSE  README.md  pyproject.toml
MetaMerge/config/: defaults.yaml
MetaMerge/examples/: plausibility_template.csv
MetaMerge/r/: metamerge_heatmap_report.R
MetaMerge/scripts/: make_metamerge_linker.py
MetaMerge/src/metamerge/: __init__.py  classify.py  cli.py  common_names.py  config.py  defaults.py  holi.py  io.py  linker.py  metadata.py  report.py  utils.py  workbook.py
MetaMerge/tests/: test_classification.py  test_matching.py  test_smoke.py
Spinner/: CHANGELOG.md  README.md  Spinner  Spinner.py  requirements.txt
flyforge/: CHANGELOG.md  CITATION.cff  FlyForge  FlyForge.py  FlyForgeAudit  FlyForgeAudit.py  FlyForgeAudit_README.md  LICENSE  README.md
flyguide/: NCBI-NT_Downloader.pl  README.md  flyguide.sh  gbifSpeciesList_NCBIDownloader_KingdomSort.sh  guidecheck.sh  split_fasta_by_kingdom_organelle_simple.pl
(+67 files in other folders)
